[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/EnemyNavigation2D.gd" type="Script" id=4]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=6]
[ext_resource path="res://Scripts/BulletManager.gd" type="Script" id=7]
[ext_resource path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Shockwave"
length = 0.4

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 16, 16, 336, 16, 336, 160, 16, 160 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 16, 16, 336, 16, 336, 160, 16, 160 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 72 )

[sub_resource type="TileSet" id=4]
0/name = "Dungeon_Tileset.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 161, 161 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 288, Vector2( 0, 1 ), 292, Vector2( 0, 2 ), 384, Vector2( 0, 3 ), 511, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 192, Vector2( 1, 3 ), 511, Vector2( 1, 5 ), 19922944, Vector2( 1, 6 ), 19267584, Vector2( 2, 0 ), 72, Vector2( 2, 1 ), 73, Vector2( 2, 5 ), 33488896, Vector2( 2, 6 ), 33488896, Vector2( 2, 7 ), 3604480, Vector2( 3, 3 ), 4, Vector2( 3, 5 ), 33488896, Vector2( 3, 6 ), 33488896, Vector2( 4, 5 ), 33226752, Vector2( 4, 6 ), 33488896, Vector2( 5, 2 ), 16777216, Vector2( 5, 3 ), 9437455, Vector2( 5, 4 ), 28901446, Vector2( 5, 5 ), 33226756, Vector2( 5, 6 ), 33488896, Vector2( 5, 7 ), 131072, Vector2( 6, 2 ), 4194304, Vector2( 6, 3 ), 27066370, Vector2( 6, 4 ), 28573762, Vector2( 6, 5 ), 32702468, Vector2( 6, 6 ), 33488896, Vector2( 6, 7 ), 19333120, Vector2( 6, 8 ), 1441792, Vector2( 7, 3 ), 5767458, Vector2( 7, 4 ), 27656272, Vector2( 7, 5 ), 31129600, Vector2( 7, 6 ), 24838144, Vector2( 7, 7 ), 27197440, Vector2( 8, 4 ), 16777304, Vector2( 8, 5 ), 16646144, Vector2( 8, 6 ), 33226752, Vector2( 8, 7 ), 65536, Vector2( 9, 6 ), 65536 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shockwave = SubResource( 1 )

[node name="GUI" parent="." instance=ExtResource( 9 )]
margin_left = -8.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = -32.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 264, 88 )

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="PlayerCamera" type="Camera2D" parent="."]
script = ExtResource( 5 )

[node name="Room" type="Node2D" parent="."]
position = Vector2( 456, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Enemy" parent="Room" instance=ExtResource( 3 )]

[node name="Enemy5" parent="Room" instance=ExtResource( 3 )]
position = Vector2( 96, 72 )

[node name="Enemy6" parent="Room" instance=ExtResource( 3 )]
position = Vector2( 176, 128 )

[node name="Enemy4" parent="Room" instance=ExtResource( 3 )]
position = Vector2( 168, 16 )

[node name="Enemy2" parent="Room" instance=ExtResource( 3 )]
position = Vector2( 224, 128 )

[node name="Enemy3" parent="Room" instance=ExtResource( 3 )]
position = Vector2( 272, 80 )

[node name="RoomNavigation" type="Navigation2D" parent="Room"]
script = ExtResource( 4 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Room/RoomNavigation"]
visible = false
navpoly = SubResource( 2 )

[node name="RoomCamera" type="Camera2D" parent="Room"]
position = Vector2( 176, 88 )

[node name="RoomBounds" type="Area2D" parent="Room"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/RoomBounds"]
position = Vector2( 176, 88 )
shape = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="Room"]
z_index = -1
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 0, 393223, 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 2, 11, 0, 196609, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65538, 65547, 0, 196609, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65538, 131083, 0, 196609, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65538, 196619, 0, 196609, 262144, 0, 65536, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65538, 262155, 0, 196609, 327680, 0, 131072, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131074, 327691, 0, 196609 )

[node name="Room2" type="Node2D" parent="."]
position = Vector2( 0, -240 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Enemy" parent="Room2" instance=ExtResource( 3 )]

[node name="Enemy5" parent="Room2" instance=ExtResource( 3 )]
position = Vector2( 96, 72 )

[node name="Enemy6" parent="Room2" instance=ExtResource( 3 )]
position = Vector2( 176, 128 )

[node name="Enemy4" parent="Room2" instance=ExtResource( 3 )]
position = Vector2( 168, 16 )

[node name="Enemy2" parent="Room2" instance=ExtResource( 3 )]
position = Vector2( 224, 128 )

[node name="Enemy3" parent="Room2" instance=ExtResource( 3 )]
position = Vector2( 272, 80 )

[node name="RoomNavigation" type="Navigation2D" parent="Room2"]
script = ExtResource( 4 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Room2/RoomNavigation"]
visible = false
navpoly = SubResource( 2 )

[node name="RoomCamera" type="Camera2D" parent="Room2"]
position = Vector2( 176, 88 )

[node name="RoomBounds" type="Area2D" parent="Room2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room2/RoomBounds"]
position = Vector2( 176, 88 )
shape = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="Room2"]
z_index = -1
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 0, 393223, 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 2, 11, 0, 196609, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65538, 65547, 0, 196609, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65538, 131083, 0, 196609, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65538, 196619, 0, 196609, 262144, 0, 65536, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65538, 262155, 0, 196609, 327680, 0, 131072, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131074, 327691, 0, 196609 )

[node name="StartRoom" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="StartRoom"]
z_index = -1
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65525, 0, 393224, 65535, 0, 327684, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537 )

[node name="RoomCamera" type="Camera2D" parent="StartRoom"]
position = Vector2( 176, 88 )
current = true

[node name="RoomBounds" type="Area2D" parent="StartRoom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartRoom/RoomBounds"]
position = Vector2( 176, 88 )
shape = SubResource( 3 )

[node name="RoomNavigation" type="Navigation2D" parent="StartRoom"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="StartRoom/RoomNavigation"]
visible = false
navpoly = SubResource( 2 )
